--- a/snmp/tasks.yaml
+++ b/snmp/tasks.yaml
@@ -1,17 +1,8 @@
-# This tasks will be applied on controller nodes,
-# here you can also specify several roles, for example
-# ['cinder', 'compute'] will be applied only on
-# cinder and compute nodes
-- role: ['controller']
-  stage: post_deployment
-  type: shell
-  parameters:
-    cmd: ./deploy.sh
-    timeout: 42
 # Task is applied for all roles
 - role: '*'
-  stage: pre_deployment
-  type: shell
-  parameters:
-    cmd: echo all > /tmp/plugin.all
-    timeout: 42
+ stage: post_deployment
+ type: puppet
+ parameters:
+ puppet_manifest: puppet/manifests/site.pp
+ puppet_modules: puppet/modules
+ timeout: 360
